Errors
seanmirahsani@Seans-MacBook-Pro-3 hw5-WALID-UPDATED % make
g++ -std=c++17 -c -I/opt/homebrew/include -g myCar.cpp
In file included from myCar.cpp:20:
./hw5server.cpp:69:13: error: no matching constructor for initialization of 'ecs36b_Exception'
      throw ecs36b_Exception { ("action " + action + " mismatched") };
            ^                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./ecs36b_Exception.h:12:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'basic_string<char, std::char_traits<char>, std::allocator<char>>' to 'const ecs36b_Exception' for 1st argument
class ecs36b_Exception : public another, exception
      ^
./ecs36b_Exception.h:12:7: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
In file included from myCar.cpp:20:
./hw5server.cpp:75:13: error: no matching constructor for initialization of 'ecs36b_Exception'
      throw ecs36b_Exception { ("class " + class_id + " unknown") };
            ^                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./ecs36b_Exception.h:12:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'basic_string<char, std::char_traits<char>, std::allocator<char>>' to 'const ecs36b_Exception' for 1st argument
class ecs36b_Exception : public another, exception
      ^
./ecs36b_Exception.h:12:7: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
2 errors generated.
make: *** [myCar.o] Error 1
seanmirahsani@Seans-MacBook-Pro-3 hw5-WALID-UPDATED % 
